фильтрация списка исполнителей

--- a/application/modules/default/views/scripts/layout.phtml
+++ b/application/modules/default/views/scripts/layout.phtml
@@ -50,6 +50,7 @@
 </script>
 <script src="<?= $this->baseUrl() ?>/assets/js/pace.min.js"></script>
      <script type="text/javascript">
+
 function swapStyleSheet(sheet){
 document.getElementById('pagestyle').setAttribute('href', sheet);
 }
@@ -221,7 +222,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
         <div class="form-group">
             <h5 style="padding:10px 0 10px 0;" class="text-center"> ИЛИ </h5>
             <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/vk-link/">  VK.COM </a> </div></br>
-            <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/fb-link/">  FACEBOOK </a> </div></br>
+            <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/fb-link/">  FACEBOOK.COM </a> </div></br>
             <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/ok-link/">  OK.RU</a> </div></br>
         </div>
         
@@ -251,7 +252,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
       </div>
       <div class="modal-body">
           <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/vk-link/">  VK.COM </a> </div></br>
-        <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/fb-link/">  FACEBOOK </a> </div></br>
+        <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/fb-link/">  FACEBOOK.COM </a> </div></br>
         <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/ok-link/">  OK.RU</a> </div></br>
         <h5 style="padding:10px 0 10px 0;" class="text-center"> ИЛИ </h5>
         
@@ -588,9 +589,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
 <script>
 
 
-function test(){
-    $('#ModalLogin').modal('show');
-}
+
   $(function() {
 
   }); 
