--- a/application/modules/default/views/scripts/performers/index.phtml
+++ b/application/modules/default/views/scripts/performers/index.phtml
@@ -8,43 +8,54 @@
  <?php if($this->performers){?>
       <div class="w100 productFilter clearfix">
         <div class="pull-right ">
-
+            <div class="change-order pull-left">
+              <select class="form-control selectpicker" onchange="changeSortOption()"  name="category" id="categorySelect">
+                <option value="0" selected="selected">Все категории</option>
+                  <?php foreach($this->categories as $category){?>
+                          <option value="<?= $category['id'] ?>" <?php if($this->ctegoryId == $category['id']){?> selected <?php } ?>><?= $category['title'] ?></option>
+                
+                <?php } ?> 
+              </select>
+            </div>
           <div class="change-view pull-right">
-              <a href="#" title="Grid" class="grid-view">
-                  <i class="fa fa-th-large"></i> </a>
-              <a href="#" title="List" class="list-view ">
+              <a href="#" title="List" id="listView" class="list-view">
                   <i class="fa fa-th-list"></i>
               </a> 
+              <a href="#" title="Grid" class="grid-view">
+                  <i class="fa fa-th-large"></i>
+              </a>
+              
           </div>
         </div>
       </div>
       <!--/.productFilter-->
       <div class="row  categoryProduct xsResponse clearfix">
+          <?php if(!empty($this->performers)){?>
         <?php foreach($this->performers as $performer){?>  
          
             <div class="item col-sm-4 col-lg-4 col-md-4 col-xs-6 list-view">
               <div class="product">
 
                 <div class="image">  
-                    <a href="<?= $this->baseUrl().'/default/performers/view/id/'.$performer['id']  ?>">
-                        <img src="<?= $this->baseUrl().'/images/users_images/'.$performer['image'] ?>" alt="img" class="img-responsive">
+                    <a href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$performer['u_id']  ?>">
+                        <img src="<?= $this->baseUrl().'/images/users_images/'.$performer['u_image'] ?>" alt="img" class="img-responsive">
                     </a>
                 </div>
                 <div class="description">
                   <h4>
                       
-                        <a href="<?= $this->baseUrl().'/default/performers/view/id/'.$performer['id']  ?>">
-                            <?= $performer['username'].' '.mb_substr($performer['surname'], 0, 1, 'utf-8').'.' ?>
+                        <a href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$performer['u_id']  ?>">
+                            <?= $performer['u_username'].' '.mb_substr($performer['u_surname'], 0, 1, 'utf-8').'.' ?>
                         </a>
                   </h4>
                   
                     <div class="grid-description">
-                        <p><?= $performer['about'] ?></p>
+                        <p><?= $performer['u_about'] ?></p>
                     </div></div>
 <!--                <div class="price"> <span><? $this->task['customers_price'] ?> </span>руб </div>-->
                 <div class="action-control"> 
                     
-                        <a class="btn btn-primary" href="<?= $this->baseUrl().'/default/performers/view/id/'.$performer['id'] ?>"> 
+                        <a class="btn btn-primary" href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$performer['u_id'] ?>"> 
                             <span class="add2cart">
                                 Подробнее
                             </span> 
@@ -52,6 +63,9 @@
                 </div>
               </div>
             </div>
+        <?php } ?>
+        <?php }else{ ?>
+          <h4>Исполнителей по данной категории пока нет</h4>
         <?php } ?>
         <!--/.item-->
       </div>
@@ -72,3 +86,10 @@
       </div>    
  <?php } ?>     
     </div>
+<script>
+function changeSortOption(){
+    var category = $('#categorySelect :selected').val();
+    window.location.href = '<?= $this->baseUrl() ?>/default/performers/index/categoryId/'+category+'/';
+    
+}
+</script>
