--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1503,14 +1503,14 @@ h1.bolder-style.dark, h1.bolder-style.dark a {
 	display: block;
 	max-height: 540px;
 	height: auto;
-	overflow: hidden;
+/*	overflow: hidden;*/
 	position: relative;
 }
 .slider-item {
 	width: 100%;
 	height: 100%;
 	position: relative;
-	overflow: hidden;
+/*	overflow: hidden;*/
 }
 .sliderImg {
 	position: relative;
