--- a/application/modules/customer/views/scripts/task/new-task.phtml
+++ b/application/modules/customer/views/scripts/task/new-task.phtml
@@ -2,6 +2,9 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
+            <img class="img-responsive" src="<?= $this->baseUrl().'/images/task_banner.jpg' ?>">
+        </div>
+        <div class="col-lg-12">
             <h3>Создание задачи</h3>
         </div>
         <div class="col-lg-12">
@@ -35,7 +38,7 @@
                     <textarea name="description" id="description" style="width: 100%" rows="10" class="form-control"></textarea>
                     <p id="description_error" class="text-danger" style="display: none">* Поле не может быть пустым</p>
                 </div>
-                <div class="col-sm-12">
+                <div class="">
                 <div class="col-sm-4">
                     <label>Стоимость</label>
                     <input type="text" name="price" id="price" class="form-control" style="width: 100%">
