--- a/application/modules/default/views/scripts/performers/index.phtml
+++ b/application/modules/default/views/scripts/performers/index.phtml
@@ -38,7 +38,7 @@
 
                 <div class="image">  
                     <a href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$performer['u_id']  ?>">
-                        <img src="<?= $this->baseUrl().'/images/users_images/'.$performer['u_image'] ?>" alt="img" class="img-responsive">
+                        <img src="<?= $this->baseUrl().'/images/users_images/'.$performer['u_image'] ?>" style="max-height: 140px" class="img-responsive img-thumbnail" alt="img">
                     </a>
                 </div>
                 <div class="description">
