--- a/application/modules/performer/views/scripts/user/index.phtml
+++ b/application/modules/performer/views/scripts/user/index.phtml
@@ -75,49 +75,51 @@
         <ul class="swatches Color">
           <?php switch ($this->customersRating){
               case 1:?>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
           <?php break;
               case 2:
       ?>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
         <?php
         break;
         case 3: ?>  
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
         <?php break;
               case 4:
-    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
+    ?>      
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
           <?php break;
               case 5:
-    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
+    ?>      
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
           <?php 
           break;
           default: ?>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
           <?php }?>
         </ul>
       </div>
@@ -132,49 +134,49 @@
         <ul class="swatches Color">
           <?php switch ($this->performersRating){
               case 1:?>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
           <?php break;
               case 2:
       ?>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
         <?php
         break;
         case 3: ?>  
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
         <?php break;
               case 4:
-    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
+    ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
           <?php break;
               case 5:
-    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
+    ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+             <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
           <?php 
           break;
           default: ?>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
           <?php }?>
         </ul>
       </div>
